Adicionada a seção de qualidades e um pouco do formulário(ainda precisa corrigir algumas coisas)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="shortcut icon" href="">
+	<link rel="shortcut icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
 
@@ -160,6 +160,64 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="sect-3">
+		<h1>Nossos serviços são conhecidos por:</h1>
+		<div class="container">
+			<div>
+				<img src="img/icon_trem.svg" alt="Ícone de trem">
+				<h2>Disponibilidade</h2>
+				<p>Nossa frota conta com uma disponibilidade de mais de 1.000 trens</p>
+			</div>
+			<div>
+				<img src="img/icon_velocimetro.svg" alt="Ícone de velocimetro">
+				<h2>Velocidade</h2>
+				<p>Nossa frota conta com uma velocidade de mais de 1.000 trens</p>
+			</div>
+			<div>
+				<img src="img/icon_cadeado.svg" alt="Ícone de cadeado">
+				<h2>Segurança</h2>
+				<p>Nossa frota conta com uma segurança de mais de 1.000 trens</p>
+			</div>
+		</div>
+	</section>
+
+	<section class="sect-4">
+		<div class="container">
+			<h1>Sobretudo:</h1>
+			<h1>Confiança</h1>
+			<img src="img/icon_aperto.svg" alt="Ícone de aperto de mão">
+			<a href="#" class="btn branco">
+				Faça parte do progresso
+			</a>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+			</p>
+		</div>
+	</section>
+
+	<section class="sect-5">
+		<h1>Nos contate</h1>
+		<h1><span>Endereço: “nome da rua aqui”, 134, São Paulo, Brasil</span></h1>
+		<h1><span>Email: empresa@gmail.com</span></h1>
+		<h1><span>Telefone: (19) 99999-9999</span></h1>
+		<div class="formbg">
+			<div class="container">
+				<h1>arrumar as coisa aq</h1>
+				<h2>Ou envie uma mensagem pelo formulário</h2>
+				<label for="email">E-mail</label>
+				<input type="text" name="email" id="email">
+				<label for="mensagem">Mensagem</label>
+				<textarea name="mensagem" id="mensagem"></textarea>
+				<a href="#" class="btn escuro">
+					Enviar
+				</a>
+			</div>
+		</div>
+	</section>
+
+	<footer class="footer">
+		<p>Station 2023 todos os direitos reservados. </p>
+	</footer>
 
 	<!-- JavaScript -->
 	<script src="main.js"></script>
