--- a/index.html
+++ b/index.html
@@ -202,19 +202,22 @@
 		<h1><span>Telefone: (19) 99999-9999</span></h1>
 		<div class="formbg">
 			<div class="container">
-				<h1>arrumar as coisa aq</h1>
-				<h2>Ou envie uma mensagem pelo formulário</h2>
-				<label for="email">E-mail</label>
-				<input type="text" name="email" id="email">
-				<label for="mensagem">Mensagem</label>
-				<textarea name="mensagem" id="mensagem"></textarea>
-				<a href="#" class="btn escuro">
-					Enviar
-				</a>
+				<img src="img/detalhe-left.png" alt="detalhe-left">
+					<div class="form">
+					<h2>Ou envie uma mensagem pelo formulário</h2>
+					<label for="email">E-mail</label>
+					<input type="text" name="email" id="email">
+					<label for="mensagem">Mensagem</label>
+					<textarea name="mensagem" id="mensagem"></textarea>
+					<a href="#" class="btn escuro">
+						Enviar
+					</a>
+				</div>
+				<img src="img/detalhe-right.png" alt="detalhe-right">
 			</div>
 		</div>
 	</section>
-
+	
 	<footer class="footer">
 		<p>Station 2023 todos os direitos reservados. </p>
 	</footer>
