header dinâmico adicionado

--- a/index.html
+++ b/index.html
@@ -17,13 +17,26 @@
 	<link rel="shortcut icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
-
-	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<script> document.documentElement.className += " js"; </script>
 </head>
 
 <body>
+
+	<header data-header="header">
+		<div class="container">
+			<div>
+				<h2><a href="#">Station</a></h2>
+			</div>
+			<nav>
+				<ul>
+					<li><a href="#">Contato</a></li>
+					<li><a href="#">Sobre</a></li>
+					<li><a href="#">Serviço</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
 
 	<section class="intro-bg">
 		<header class="container">
@@ -203,7 +216,7 @@
 		<div class="formbg">
 			<div class="container">
 				<img src="img/detalhe-left.png" alt="detalhe-left">
-					<div class="form">
+				<div class="form">
 					<h2>Ou envie uma mensagem pelo formulário</h2>
 					<label for="email">E-mail</label>
 					<input type="text" name="email" id="email">
@@ -217,7 +230,7 @@
 			</div>
 		</div>
 	</section>
-	
+
 	<footer class="footer">
 		<p>Station 2023 todos os direitos reservados. </p>
 	</footer>
