efeito de digitação adicionado

--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
 
 	<section class="sect-5">
 		<h1>Nos contate</h1>
-		<h1><span>Endereço: “nome da rua aqui”, 134, São Paulo, Brasil</span></h1>
-		<h1><span>Email: empresa@gmail.com</span></h1>
-		<h1><span>Telefone: (19) 99999-9999</span></h1>
+		<h1><span data-digitacao>Endereço: “nome da rua aqui”, 134, São Paulo, Brasil</span></h1>
+		<h1><span data-digitacao>Email: empresa@gmail.com</span></h1>
+		<h1><span data-digitacao>Telefone: (19) 99999-9999</span></h1>
 		<div class="formbg">
 			<div class="container">
 				<img src="img/detalhe-left.png" alt="detalhe-left">
